[tool.poetry]
name = "Task Management System"
version = "0.1.0"
description = ""
authors = ["Mohammad Tohidul Islam <me.tohid.001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.14.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"